--- a/alacritty.yml
+++ b/alacritty.yml
@@ -31,34 +31,63 @@ font:
     x: 0
     y: -4
 
-# Colors (Snazzy + Github Dark background)
+# # Colors (Snazzy + Github Dark background)
+# colors:
+#   # Default colors
+#   primary:
+#     background: "0x24292e"
+#     foreground: "0xeff0eb"
+
+#   # Normal colors
+#   normal:
+#     black: "0x282a36"
+#     red: "0xff5c57"
+#     green: "0x5af78e"
+#     yellow: "0xf3f99d"
+#     blue: "0x57c7ff"
+#     magenta: "0xff6ac1"
+#     cyan: "0x9aedfe"
+#     white: "0xf1f1f0"
+
+#   # Bright colors
+#   bright:
+#     black: "0x686868"
+#     red: "0xff5c57"
+#     green: "0x5af78e"
+#     yellow: "0xf3f99d"
+#     blue: "0x57c7ff"
+#     magenta: "0xff6ac1"
+#     cyan: "0x9aedfe"
+#     white: "0xf1f1f0"
+# Colors Ayu Mirage
 colors:
   # Default colors
   primary:
-    background: "0x24292e"
-    foreground: "0xeff0eb"
+    background: '#1f2430'
+    foreground: '#cccac2'
+    bright_foreground: '#f28779'
 
   # Normal colors
   normal:
-    black: "0x282a36"
-    red: "0xff5c57"
-    green: "0x5af78e"
-    yellow: "0xf3f99d"
-    blue: "0x57c7ff"
-    magenta: "0xff6ac1"
-    cyan: "0x9aedfe"
-    white: "0xf1f1f0"
+    black:   '#171b24' #
+    red:     '#ed8274' #
+    green:   '#87d96c' #
+    yellow:  '#facd6e' #
+    blue:    '#6dcbfa' # 
+    magenta: '#dabafa' #
+    cyan:    '#90e1c6' #
+    white:   '#c7c7c7' #
 
-  # Bright colors
+  # Brightened
   bright:
-    black: "0x686868"
-    red: "0xff5c57"
-    green: "0x5af78e"
-    yellow: "0xf3f99d"
-    blue: "0x57c7ff"
-    magenta: "0xff6ac1"
-    cyan: "0x9aedfe"
-    white: "0xf1f1f0"
+    black: '#686868'
+    red: '#f28779'
+    green: '#d5ff80'
+    yellow: '#ffd173'
+    blue: '#73d0ff'
+    magenta: '#dfbfff'
+    cyan: '#95e6cb'
+    white: '#ffffff'
 
 shell:
   program: /bin/fish
