--- a/alacritty.yml
+++ b/alacritty.yml
@@ -1,10 +1,10 @@
 window:
   padding:
-    x: 5
+    x: 10
     y: 5
 
   # Spread additional padding evenly around the terminal content.
-  dynamic_padding: true
+  # dynamic_padding: true
 
   # Window decorations
   #
@@ -15,80 +15,131 @@ window:
   # Values for `decorations` (macOS only):
   #     - transparent: Title bar, transparent background and title bar buttons
   #     - buttonless: Title bar, transparent background and no title bar buttons
-  decorations: full
+  # decorations: transparent
+  decorations: buttonless
 
 font:
-  # no need to manually specify if ~/.config/fontconfig/fonts.conf setup
-  # normal:
-  #   family: MesloLGS Nerd Font Mono
+  normal:
+    family: Menlo
 
   # Point size
-  size: 12.0
+  size: 16.0
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
   # spacing.
-  offset:
-    x: 0
-    y: 0
+  # offset:
+  #   x: 0
+  #   y: 0
 
-# # Colors (Snazzy + Github Dark background)
-# colors:
-#   # Default colors
-#   primary:
-#     background: "0x24292e"
-#     foreground: "0xeff0eb"
-
-#   # Normal colors
-#   normal:
-#     black: "0x282a36"
-#     red: "0xff5c57"
-#     green: "0x5af78e"
-#     yellow: "0xf3f99d"
-#     blue: "0x57c7ff"
-#     magenta: "0xff6ac1"
-#     cyan: "0x9aedfe"
-#     white: "0xf1f1f0"
-
-#   # Bright colors
-#   bright:
-#     black: "0x686868"
-#     red: "0xff5c57"
-#     green: "0x5af78e"
-#     yellow: "0xf3f99d"
-#     blue: "0x57c7ff"
-#     magenta: "0xff6ac1"
-#     cyan: "0x9aedfe"
-#     white: "0xf1f1f0"
-# Colors Ayu Mirage
 colors:
   # Default colors
   primary:
-    background: "#1f2430"
-    foreground: "#cccac2"
-    bright_foreground: "#f28779"
+    background: "#1d2021"
+    foreground: "#d5c4a1"
+
+    # Bright and dim foreground colors
+    #
+    # The dimmed foreground color is calculated automatically if it is not
+    # present. If the bright foreground color is not set, or
+    # `draw_bold_text_with_bright_colors` is `false`, the normal foreground
+    # color will be used.
+    #dim_foreground: '#828482'
+    #bright_foreground: '#eaeaea'
+
+  # Cursor colors
+  #
+  # Colors which should be used to draw the terminal cursor.
+  #
+  # Allowed values are CellForeground/CellBackground, which reference the
+  # affected cell, or hexadecimal colors like #ff00ff.
+  cursor:
+    text: "#1d2021"
+    cursor: "#d5c4a1"
+
+  # Vi mode cursor colors
+  #
+  # Colors for the cursor when the vi mode is active.
+  #
+  # Allowed values are CellForeground/CellBackground, which reference the
+  # affected cell, or hexadecimal colors like #ff00ff.
+  #vi_mode_cursor:
+  #  text: CellBackground
+  #  cursor: CellForeground
+
+  # Search colors
+  #
+  # Colors used for the search bar and match highlighting.
+  #search:
+  # Allowed values are CellForeground/CellBackground, which reference the
+  # affected cell, or hexadecimal colors like #ff00ff.
+  #matches:
+  #  foreground: '#000000'
+  #  background: '#ffffff'
+  #focused_match:
+  #  foreground: '#ffffff'
+  #  background: '#000000'
+
+  #bar:
+  #  background: '#c5c8c6'
+  #  foreground: '#1d1f21'
+
+  # Keyboard regex hints
+  #hints:
+  # First character in the hint label
+  #
+  # Allowed values are CellForeground/CellBackground, which reference the
+  # affected cell, or hexadecimal colors like #ff00ff.
+  #start:
+  #  foreground: '#1d1f21'
+  #  background: '#e9ff5e'
+
+  # All characters after the first one in the hint label
+  #
+  # Allowed values are CellForeground/CellBackground, which reference the
+  # affected cell, or hexadecimal colors like #ff00ff.
+  #end:
+  #  foreground: '#e9ff5e'
+  #  background: '#1d1f21'
+
+  # Line indicator
+  #
+  # Color used for the indicator displaying the position in history during
+  # search and vi mode.
+  #
+  # By default, these will use the opposing primary color.
+  #line_indicator:
+  #  foreground: None
+  #  background: None
+
+  # Selection colors
+  #
+  # Colors which should be used to draw the selection area.
+  #
+  # Allowed values are CellForeground/CellBackground, which reference the
+  # affected cell, or hexadecimal colors like #ff00ff.
+  #selection:
+  #  text: CellBackground
+  #  background: CellForeground
 
   # Normal colors
   normal:
-    black: "#171b24" #
-    red: "#ed8274" #
-    green: "#87d96c" #
-    yellow: "#facd6e" #
-    blue: "#6dcbfa" #
-    magenta: "#dabafa" #
-    cyan: "#90e1c6" #
-    white: "#c7c7c7" #
+    black: "#1d2021"
+    red: "#fb4934"
+    green: "#b8bb26"
+    yellow: "#fabd2f"
+    blue: "#83a598"
+    magenta: "#d3869b"
+    cyan: "#8ec07c"
+    white: "#d5c4a1"
 
-  # Brightened
+  # Bright colors
   bright:
-    black: "#686868"
-    red: "#f28779"
-    green: "#d5ff80"
-    yellow: "#ffd173"
-    blue: "#73d0ff"
-    magenta: "#dfbfff"
-    cyan: "#95e6cb"
-    white: "#ffffff"
-
-shell:
-  program: /bin/fish
+    black: "#665c54"
+    red: "#fb4934"
+    green: "#b8bb26"
+    yellow: "#fabd2f"
+    blue: "#83a598"
+    magenta: "#d3869b"
+    cyan: "#8ec07c"
+    white: "#fbf1c7"
